fixed card content lower gap & float-clearfix

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ h1{
     margin-top: 100px;
     float: left;
     width: 100%;
-
 }
 
 .card{
@@ -52,21 +51,21 @@ h1{
     margin-bottom: 50px;
     background-color: rgb(15, 14, 23);
     height: 100px;
+    width: 100%;
 }
 
 .middle-card{
-    margin: 0 20px 0px 20px;
+    padding: 0 20px 0px 20px;
 }
 
 .profile-pic{
     height: 100px;
-    display: inline-block;
+    float: left;
 }
 
 .profile-text{
     padding-left: 20px;
-    vertical-align: middle;
-    display: inline-block;
+    float: left;
     color: white;
 }
 
